--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <!-- The compiled CSS file -->
     <link rel="stylesheet" href="css/production.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Web fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Source+Serif+Pro:700" rel="stylesheet">
     <!-- favicon.ico. Place these in the root directory. -->
@@ -34,7 +35,7 @@
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
-                        <h2><a href="https://a8-focusnow.herokuapp.com/" style="text-decoration: none">FocusNow</a></h2>
+                        <h2><a href="focusnow.html" style="text-decoration: none">FocusNow</a></h2>
                         <p>By breaking work time into intervals, users can more easily split their time between work
                             time and break time, increasing productivity.</p>
                     </div>
@@ -43,8 +44,8 @@
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
-                    <a href="https://a8-focusnow.herokuapp.com/" style="text-decoration: none"><img
-                            src="/img/focusnow.png" alt="FocusNow"></a>
+                    <a href="focusnow.html" style="text-decoration: none"><img
+                            src="/img/fn1.png" alt="FocusNow"></a>
                 </div>
             </div>
             <div class="grid-row grid-row--center">
@@ -55,9 +56,9 @@
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
                     <div class="border--bottom pb2 mb2">
-                        <h2><a href="https://hoshidalab.shinyapps.io/texsec/" style="text-decoration: none">TexSEC</a>
+                        <h2><a href="texsec.html" style="text-decoration: none">TexSEC</a>
                         </h2>
-                        <p>A web app that determines the risks of liver disease using gene signature inputs.</p>
+                        <p>An easy to use framework for web apps in acadamia.</p>
                     </div>
                     <p class="text--gray mb1">Built on the Shiny framework.</p>
                 </div>
