--- a/focusnow.html
+++ b/focusnow.html
@@ -46,13 +46,13 @@
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
-                    <img src="/img/fn1.png" alt="FocusNow">
+                    <img src="./img/fn1.png" alt="FocusNow">
                 </div>
             </div>
             <!-- PART 2 -->
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 reveal-on-scroll is-revealing">
-                    <img src="/img/fn2.png" alt="TexSEC">
+                    <img src="./img/fn2.png" alt="TexSEC">
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
@@ -82,13 +82,13 @@
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
-                    <img src="/img/fn3.png" alt="FocusNow">
+                    <img src="./img/fn3.png" alt="FocusNow">
                 </div>
             </div>
             <!-- PART 4 -->
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 reveal-on-scroll is-revealing">
-                    <img src="/img/fn4.png" alt="TexSEC">
+                    <img src="./img/fn4.png" alt="TexSEC">
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
