--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
                     <a href="focusnow.html" style="text-decoration: none"><img
-                            src="/img/fn1.png" alt="FocusNow"></a>
+                            src="./img/fn1.png" alt="FocusNow"></a>
                 </div>
             </div>
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 reveal-on-scroll is-revealing">
                     <a href="https://hoshidalab.shinyapps.io/texsec/" style="text-decoration: none"><img
-                            src="/img/TexSEC.png" alt="TexSEC"></a>
+                            src="./img/TexSEC.png" alt="TexSEC"></a>
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
