--- a/texsec.html
+++ b/texsec.html
@@ -47,7 +47,7 @@
             </div>
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 reveal-on-scroll is-revealing">
-                    <img src="/img/ts1.png" alt="FocusNow">
+                    <img src="./img/ts1.png" alt="FocusNow">
                 </div>
             </div>
             <!-- PART 2 -->
@@ -67,7 +67,7 @@
             </div>
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 reveal-on-scroll is-revealing">
-                    <img src="/img/ts2.png" alt="FocusNow">
+                    <img src="./img/ts2.png" alt="FocusNow">
                 </div>
             </div>
             <!-- PART 3 -->
@@ -85,7 +85,7 @@
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
-                    <img src="/img/ts3.png" alt="FocusNow">
+                    <img src="./img/ts3.png" alt="FocusNow">
                 </div>
             </div>
         </div>
