--- a/texsec.html
+++ b/texsec.html
@@ -21,13 +21,17 @@
     <!-- Header -->
     <header class="align--center pt3">
         <div class="container--lg pb3">
-            <a href="index.html" style="text-decoration: none"><h1 class="mb2">Hiroki Hoshida</h1></a>
+            <a href="index.html" style="text-decoration: none">
+                <h1 class="mb2">Hiroki Hoshida</h1>
+            </a>
         </div>
     </header>
 
     <main>
         <div class="align--center container--lg mt3">
-            <a href="https://hoshidalab.shinyapps.io/texsec/" style="text-decoration: none"><h2 class="mb2">TexSEC</h2></a>
+            <a href="https://hoshidalab.shinyapps.io/texsec/" style="text-decoration: none">
+                <h2 class="mb2">TexSEC</h2>
+            </a>
         </div>
         <!-- Focus -->
         <div class="container--lg pt1 pb1">
@@ -35,14 +39,18 @@
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2">
                     <div class="pb1 mb1">
-                        <h2>Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Background</h2>
+                        <p>Researchers in the medical field often have little experience in UI and UX design. Often
+                            times, this leads to underdeveloped front ends for web apps connected to research papers.
+                            This in turn can lead to lower understanding of the reserach material by others, and can
+                            hinder the progress of collaborative research. By
+                            creating an easy to use frontend framework, researchers will be able to plug in their
+                            already made functions into an aesthetically pleasing template with minimal effort, allowing
+                            them to focus on their own work.
+
+                        </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 1</p>
+                    <p class="text--gray mb1">An example of a web app created with the framework.</p>
                 </div>
             </div>
             <div class="grid-row grid-row--center">
@@ -51,18 +59,21 @@
                 </div>
             </div>
             <!-- PART 2 -->
-            
+
             <div class="border--top grid-row grid-row--center">
                 <div class="grid-column mt3 mb2">
                     <div class="pb1 mb1">
                         <h2>Development</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>I decided to focus heavily on the ease of transition between local functions to server hosted
+                            web apps. By using Shiny, R programs can be converted into a UI/request based application,
+                            though the UI needs to be developed further. By implementing Shiny functions into the
+                            framework, need for redundant documentation was reduced, and by preimplementing as many of
+                            the "basics" of web apps as possible, the framework can quickly be used without need for
+                            consideration of the more complex, but common, intricacies of online hosted applications.
+                            Furthermore, easy access to commonly changed variables (such as colors) was heavily
+                            considered, and were made easy to access when using the framework. </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 2</p>
+                    <p class="text--gray mb1">A near blank template of the framework being filled.</p>
                 </div>
             </div>
             <div class="grid-row grid-row--center">
@@ -74,14 +85,12 @@
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Conclusion</h2>
+                        <p>With this framework, researchers can quickly develop applications without the need to
+                            consider the frontend while they conduct resaerch. Presets are a good way to increase
+                            usability of frameworks that may be too complicated otherwise.</p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 3</p>
+                    <p class="text--gray mb1">A completed input screen with the framework.</p>
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
