--- a/focusnow.html
+++ b/focusnow.html
@@ -21,13 +21,17 @@
     <!-- Header -->
     <header class="align--center pt3">
         <div class="container--lg pb3">
-            <a href="index.html" style="text-decoration: none"><h1 class="mb2">Hiroki Hoshida</h1></a>
+            <a href="index.html" style="text-decoration: none">
+                <h1 class="mb2">Hiroki Hoshida</h1>
+            </a>
         </div>
     </header>
 
     <main>
         <div class="align--center container--lg mt3">
-            <a href="https://focusnowapp.herokuapp.com/" style="text-decoration: none"><h2 class="mb2">FocusNow</h2></a>
+            <a href="https://focusnowapp.herokuapp.com/" style="text-decoration: none">
+                <h2 class="mb2">FocusNow</h2>
+            </a>
         </div>
         <!-- Focus -->
         <div class="container--lg pt1 pb1">
@@ -35,14 +39,20 @@
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Background </h2>
+                        <p>Many people often struggle with time management, especially in balancing their workload with
+                            breaks. In particular, people who need to adapt to a more rigorous schedule (high
+                            school/college freshmen, etc.)
+                            need to develop good work habits quickly or they will cement bad habits that become
+                            increasingly harder to shake off as time goes on. Many students are never taught proper time
+                            management techniques, and have to go off their
+                            own experiences.
+
+                            A webapp that creates a strict work/break micro schedule based on the user’s overall
+                            schedule can be helpful in developing these habits.
+                        </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 1</p>
+                    <p class="text--gray mb1">FocusNow Main Screen.</p>
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
@@ -57,28 +67,34 @@
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Development</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Research</h2>
+                        <p>First, I needed to observe how people studied in the first place. I observed multiple
+                            peoples’ study habits, such as how they rationed out their breaks (long breaks between each
+                            task, short breaks during tasks, etc.), and surveyed how productive they felt after
+                            different kinds of studying methods. Second, I researched various time management
+                            techniques, and
+                            tried various methods to see which felt most effective, and how they can be improved.
+                        </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 2.</p>
+                    <p class="text--gray mb1">Task creation page for FocusNow.</p>
                 </div>
             </div>
             <!-- PART 3 -->
             <div class="grid-row grid-row--center">
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Feedback</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Development</h2>
+                        <p>The main focus was ease of integration into already existing schedules. There was no need to
+                            rebuild an entire schedule/calendar app, but just the need for a schedule micromanager.
+                            I decided that users should Input tasks already decided on earlier, then FocusNow can then
+                            automatically section them off into small
+                            pieces. Another focus was the ease of understanding the usage of the app as quickly as
+                            possible. In order to do this, FocusNow automatically does functions such as splitting tasks
+                            as soon as user inputs them,
+                            and sets default values (that user can change) that allows for optimal use.
+                        </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 3</p>
+                    <p class="text--gray mb1">Task page with automatic task rationing and ordering.</p>
                 </div>
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2 order-1 reveal-on-scroll is-revealing">
@@ -93,14 +109,20 @@
                 <div class="grid-column span-1"></div>
                 <div class="grid-column mt3 mb2">
                     <div class="border--bottom pb2 mb2">
-                        <h2>Revisions</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <h2>Conclusions</h2>
+                        <p>Early focus on study habits were important
+                        <ul>
+                            <li>Don’t try to reshape habits entirely, allow for integration and a more subtle adaptation
+                                for users</li>
+                        </ul>
+                        Cut down on unnecessary features
+                        <ul>
+                            <li>Most people already have a calendar app of their choice, don’t try to force users to
+                                replace items in their routine if you want to introduce something new.</li>
+                        </ul>
+                        </p>
                     </div>
-                    <p class="text--gray mb1">Caption for Image 4.</p>
+                    <p class="text--gray mb1">Edit task screen. FocusNow automatically reorders/rerations tasks based on edits.</p>
                 </div>
             </div>
         </div>
